kubernetes/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: project3
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
  - protocol: TCP
    port: 8706
    targetPort: 8706
