kubernetes/mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
  namespace: project3
spec:
  type: ClusterIP
  selector:
    app: mongo
  ports:
  - protocol: TCP
    port: 27017
    targetPort: 27017
