kubernetes/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: project3
spec:
  type: ClusterIP
  selector:
    app: redis
  ports:
  - protocol: TCP
    port: 6379
    targetPort: 6379
